--- a/index.html
+++ b/index.html
@@ -170,10 +170,6 @@
       <h1 id="gameTitle" class="text-6xl font-bold mb-4 pulse-animation">Recrute-moi si tu peux</h1>
       <p id="gameSubtitle" class="text-2xl opacity-90">Trouve ton match parfait !</p>
 
-      <p class="mt-8 text-lg opacity-90 max-w-3xl mx-auto">
-        Exemple : le recruteur <strong>Inolab</strong> cherche un développeur web.
-        Le candidat idéal est <strong>Nicolas Perez</strong>… mais personne ne le sait !
-      </p>
     </div>
   </div>
 
@@ -423,25 +419,25 @@
    * ✅ CHEMINS D’IMAGES (préfixe ./ pour éviter les soucis)
    **********************/
   const candidates = [
-    { name: "Faustine DUBOIS", color: "#FFAD5C", hiddenRole: "Administrateur Réseau", avatar: "./assets/candidates/faustine.jpg" },
-    { name: "Nicolas PEREZ",  color: "#6890FC", hiddenRole: "Développeur Web",        avatar: "./assets/candidates/nicolas.jpg" },
-    { name: "Ines ADAM",      color: "#FF94E8", hiddenRole: "Data Analyst",          avatar: "./assets/candidates/ines.jpg" },
-    { name: "Aniq SAPA",      color: "#1CE8E5", hiddenRole: "Chef de Projet Informatique", avatar: "./assets/candidates/aniq.jpg" },
-    { name: "Clyde MARTIN",   color: "#E1A9F5", hiddenRole: "Technicien Support Informatique", avatar: "./assets/candidates/clyde.jpg" },
-    { name: "Lou DEBOUIS",    color: "#FFCB3B", hiddenRole: "Ingénieur Cybersécurité", avatar: "./assets/candidates/lou.jpg" },
-    { name: "Marina COSTA",   color: "#ACE6B2", hiddenRole: "UI/UX Designer",        avatar: "./assets/candidates/marina.jpg" },
-    { name: "Eden CETIN",     color: "#FF7575", hiddenRole: "Architecte Cloud",      avatar: "./assets/candidates/eden.jpg" }
+    { name: "Faustine DUBOIS", color: "#FFAD5C", hiddenRole: "Administrateur Réseau", avatar: "./candidates/faustine.jpg" },
+    { name: "Nicolas PEREZ",  color: "#6890FC", hiddenRole: "Développeur Web",        avatar: "./candidates/nicolas.jpg" },
+    { name: "Ines ADAM",      color: "#FF94E8", hiddenRole: "Data Analyst",          avatar: "./candidates/ines.jpg" },
+    { name: "Aniq SAPA",      color: "#1CE8E5", hiddenRole: "Chef de Projet Informatique", avatar: "./candidates/aniq.jpg" },
+    { name: "Clyde MARTIN",   color: "#E1A9F5", hiddenRole: "Technicien Support Informatique", avatar: "./candidates/clyde.jpg" },
+    { name: "Lou DEBOUIS",    color: "#FFCB3B", hiddenRole: "Ingénieur Cybersécurité", avatar: "./candidates/lou.jpg" },
+    { name: "Marina COSTA",   color: "#ACE6B2", hiddenRole: "UI/UX Designer",        avatar: "./candidates/marina.jpg" },
+    { name: "Eden CETIN",     color: "#FF7575", hiddenRole: "Architecte Cloud",      avatar: "./candidates/eden.jpg" }
   ];
 
   const recruiters = [
-    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./assets/companies/connex-plus.png" },
-    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./assets/companies/inolab.png" },
-    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./assets/companies/synergie-plus.png" },
-    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./assets/companies/agili-pro.png" },
-    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./assets/companies/arnaud.png" },
-    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./assets/companies/foxy.png" },
-    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./assets/companies/agence-tech.png" },
-    { name: "Digi Word",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./assets/companies/digi-word.png" }
+    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./companies/connex-plus.jpg" },
+    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./companies/inolab.jpg" },
+    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./companies/synergie-plus.jpg" },
+    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./companies/agili-pro.jpg" },
+    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./companies/arnaud.jpg" },
+    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./companies/foxy.jpg" },
+    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./companies/agence-tech.jpg" },
+    { name: "Digi Word",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./companies/digi-world.jpg" }
   ];
 
   const perfectMatches = {
