--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="max-w-6xl mx-auto px-6">
       <h2 class="text-4xl font-bold text-center mb-12 text-gray-800">Les Rôles</h2>
       <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-gradient-to-br from-blue-500 to-purple-600 rounded-2xl p-8 text-white">
+        <div class="rounded-2xl p-8 text-white" style="background-color: #2C75FF;">
           <div class="text-center mb-6">
             <svg class="w-16 h-16 mx-auto mb-4" fill="currentColor" viewBox="0 0 24 24">
               <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
@@ -430,14 +430,14 @@
   ];
 
   const recruiters = [
-    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./companies/connex-plus.jpg" },
-    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./companies/inolab.jpg" },
-    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./companies/synergie-plus.jpg" },
-    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./companies/agili-pro.jpg" },
-    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./companies/arnaud.jpg" },
-    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./companies/foxy.jpg" },
-    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./companies/agence-tech.jpg" },
-    { name: "Digi Word",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./companies/digi-world.jpg" }
+    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./companies/connex-plus.JPG" },
+    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./companies/inolab.JPG" },
+    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./companies/synergie-plus.JPG" },
+    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./companies/agili-pro.JPG" },
+    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./companies/arnaud.JPG" },
+    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./companies/foxy.JPG" },
+    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./companies/agence-tech.JPG" },
+    { name: "Digi Word",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./companies/digi-world.JPG" }
   ];
 
   const perfectMatches = {
