--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="max-w-6xl mx-auto px-6">
       <h2 class="text-4xl font-bold text-center mb-12 text-gray-800">Les Rôles</h2>
       <div class="grid md:grid-cols-2 gap-8">
-        <div class="rounded-2xl p-8 text-white" style="background-color: #2C75FF;">
+        <div class="rounded-2xl p-8 text-white" style="background-color: #204ECF;">
           <div class="text-center mb-6">
             <svg class="w-16 h-16 mx-auto mb-4" fill="currentColor" viewBox="0 0 24 24">
               <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <div class="bg-gradient-to-br from-green-500 to-teal-600 rounded-2xl p-8 text-white">
+        <div class="rounded-2xl p-8 text-white" style="background-color: #204ECF;">
           <div class="text-center mb-6">
             <svg class="w-16 h-16 mx-auto mb-4" fill="currentColor" viewBox="0 0 24 24">
               <path d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2z" />
