--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   </div>
 
   <!-- Slide 3: Déroulé -->
-  <div class="slide bg-gradient-to-br from-purple-500 to-pink-500 items-center justify-center text-white pt-20">
+  <div class= "background-color: #0E55E6;">
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h2 class="text-4xl font-bold mb-12">Déroulé des Entretiens</h2>
       <div class="grid md:grid-cols-3 gap-8">
@@ -369,12 +369,12 @@
   <!-- Slide 9 -->
   <div class="slide gradient-bg items-center justify-center text-white pt-20">
     <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-4xl font-bold mb-8">🎉 Révélation des Matchs Parfaits 🎉</h2>
+      <h2 class="text-4xl font-bold mb-8"> Révélation des Matchs Parfaits </h2>
 
       <div class="mb-8">
         <button onclick="revealMatches()"
           class="px-12 py-4 bg-yellow-500 text-gray-800 rounded-full font-bold text-2xl hover:bg-yellow-400 transition-colors pulse-animation">
-          🔮 Révéler les Matchs !
+          Révéler les Matchs !
         </button>
       </div>
 
@@ -388,7 +388,7 @@
       <h2 class="text-4xl font-bold text-center mb-8 text-gray-800">🏆 Tableau des Scores</h2>
 
       <div class="grid md:grid-cols-2 gap-8 mb-8">
-        <div class="bg-gradient-to-br from-purple-500 to-pink-500 rounded-2xl p-6 text-white">
+        <div class="rounded-2xl p-8 text-white" style="background-color: #0E55E6;">
           <h3 class="text-2xl font-bold mb-4">💯 Système de Points</h3>
           <div class="space-y-3">
             <div class="flex items-center justify-between"><span>✅ Match parfait (mutuel)</span> <span class="font-bold">30 pts chacun</span></div>
@@ -401,7 +401,7 @@
         <div class="flex items-center justify-center">
           <button onclick="calculateScores()"
             class="px-8 py-4 bg-green-500 text-white rounded-2xl font-bold text-xl hover:bg-green-600 transition-colors bounce-in">
-            🧮 Calculer les Scores
+            Calculer les Scores
           </button>
         </div>
       </div>
@@ -430,14 +430,14 @@
   ];
 
   const recruiters = [
-    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./companies/connex-plus.JPG" },
-    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./companies/inolab.JPG" },
-    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./companies/synergie-plus.JPG" },
-    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./companies/agili-pro.JPG" },
-    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./companies/arnaud.JPG" },
-    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./companies/foxy.JPG" },
-    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./companies/agence-tech.JPG" },
-    { name: "Digi Word",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./companies/digi-world.JPG" }
+    { name: "Connex plus", color: "#15D4D1", hiddenRole: "Administrateur Réseau", logo: "./companies/Conex-plus.JPG" },
+    { name: "Inolab",      color: "#FF94E8", hiddenRole: "Développeur Web",        logo: "./companies/Inolab.JPG" },
+    { name: "Synergie +",  color: "#FFCB3B", hiddenRole: "Data Analyst",          logo: "./companies/Synergie-plus.JPG" },
+    { name: "Agili pro",   color: "#FFAD5C", hiddenRole: "Chef de Projet Informatique", logo: "./companies/Agili-pro.JPG" },
+    { name: "ARNAUD",      color: "#6890FC", hiddenRole: "Technicien Support Informatique", logo: "./companies/Arnaud.JPG" },
+    { name: "Foxy",        color: "#E1A9F5", hiddenRole: "Ingénieur Cybersécurité", logo: "./companies/Foxy.JPG" },
+    { name: "Agence tech", color: "#FF7575", hiddenRole: "UI/UX Designer",        logo: "./companies/Agence-tech.JPG" },
+    { name: "Digi World",   color: "#ACE6B2", hiddenRole: "Architecte Cloud",      logo: "./companies/Digi-world.JPG" }
   ];
 
   const perfectMatches = {
