--- a/index.html
+++ b/index.html
@@ -221,32 +221,34 @@
     </div>
   </div>
 
-  <!-- Slide 3: Déroulé -->
-  <div class= "background-color: #0E55E6;">
-    <div class="max-w-4xl mx-auto px-6 text-center">
-      <h2 class="text-4xl font-bold mb-12">Déroulé des Entretiens</h2>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
-          <h3 class="text-2xl font-bold mb-4">1er Tour</h3>
-          <p class="text-4xl font-bold mb-2" id="round1Text">10 min</p>
-          <p>Première impression</p>
-        </div>
-        <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
-          <h3 class="text-2xl font-bold mb-4">2e Tour</h3>
-          <p class="text-4xl font-bold mb-2" id="round2Text">8 min</p>
-          <p>Approfondissement</p>
-        </div>
-        <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
-          <h3 class="text-2xl font-bold mb-4">Tours suivants</h3>
-          <p class="text-4xl font-bold mb-2" id="round3Text">6 min</p>
-          <p>Décision finale</p>
-        </div>
+  
+<!-- Slide 3: Déroulé -->
+<div class="slide items-center justify-center text-white pt-20" style="background-color:#0E55E6;">
+  <div class="max-w-4xl mx-auto px-6 text-center">
+    <h2 class="text-4xl font-bold mb-12">Déroulé des Entretiens</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
+        <h3 class="text-2xl font-bold mb-4">1er Tour</h3>
+        <p class="text-4xl font-bold mb-2" id="round1Text">10 min</p>
+        <p>Première impression</p>
       </div>
-      <div class="mt-12">
-        <p class="text-xl opacity-90">🔄 Tournantes : chacun rencontre tout le monde</p>
+      <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
+        <h3 class="text-2xl font-bold mb-4">2e Tour</h3>
+        <p class="text-4xl font-bold mb-2" id="round2Text">8 min</p>
+        <p>Approfondissement</p>
+      </div>
+      <div class="bg-white bg-opacity-20 rounded-2xl p-6 backdrop-blur-sm">
+        <h3 class="text-2xl font-bold mb-4">Tours suivants</h3>
+        <p class="text-4xl font-bold mb-2" id="round3Text">6 min</p>
+        <p>Décision finale</p>
       </div>
     </div>
+    <div class="mt-12">
+      <p class="text-xl opacity-90">🔄 Tournantes : chacun rencontre tout le monde</p>
+    </div>
   </div>
+</div>
+
 
   <!-- Slide 4: Timer 10 (fond clean) -->
   <div class="slide bg-gray-50 items-center justify-center pt-20">
@@ -448,7 +450,7 @@
     "Clyde MARTIN": "ARNAUD",
     "Lou DEBOUIS": "Foxy",
     "Marina COSTA": "Agence tech",
-    "Eden CETIN": "Digi Word"
+    "Eden CETIN": "Digi World"
   };
 
   const LS_KEYS = { candidate: "sr_candidate_choices_v1", recruiter: "sr_recruiter_choices_v1" };
