--- a/index.html
+++ b/index.html
@@ -440,22 +440,23 @@ main{
     </div>
   </div>
 
-  <!-- Slide 9 -->
-   <div class="slide scroll bg-white">
-  <div class="slide gradient-bg items-center justify-center text-white">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-4xl font-bold mb-8"> Révélation des Matchs Parfaits </h2>
 
-      <div class="mb-8">
-        <button onclick="revealMatches()"
-          class="px-12 py-4 bg-yellow-500 text-gray-800 rounded-full font-bold text-2xl hover:bg-yellow-400 transition-colors pulse-animation">
-          Révéler les Matchs !
-        </button>
-      </div>
+   <!-- Slide 9 -->
+<div class="slide scroll gradient-bg items-center text-white">
+  <div class="max-w-6xl mx-auto px-6 text-center w-full">
+    <h2 class="text-4xl font-bold mb-6">Révélation des Matchs Parfaits</h2>
 
-      <div id="matchReveal"></div>
+    <div class="mb-6">
+      <button onclick="revealMatches()"
+        class="px-12 py-4 bg-yellow-500 text-gray-800 rounded-full font-bold text-2xl hover:bg-yellow-400 transition-colors pulse-animation">
+        Révéler les Matchs !
+      </button>
     </div>
+
+    <div id="matchReveal"></div>
   </div>
+</div>
+
 
   <!-- Slide 10 -->
   <div class="slide scroll bg-white">
